k8s/travel-demo/portal/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: travel-portal
  labels:
    # istio.io/dataplane-mode: ambient
